--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <div class="container">
+        <!-- Hamburger Menu Button -->
+        <button class="hamburger-menu" id="hamburgerMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
         <!-- Left Navigation Bar -->
-        <nav class="sidebar">
+        <nav class="sidebar" id="sidebar">
             <ul class="nav-menu">
                 <li class="nav-item">List</li>
                 <li class="nav-item">expiration</li>
